<resources>
    <string name="app_name">Helium</string>
    <string name="paizhao">拍照</string>
    <string name="xiangce">相册</string>
    <string name="shiping">视频</string>
    <string name="tiaoguo">跳过</string>
    <string name="app_prompt">提示</string>
    <string name="app_submit">提交</string>
    <string name="app_submit_true">提交成功</string>
    <string name="app_confirm">确认</string>
    <string name="app_confirm_true">确认更新</string>
    <string name="app_cancel">取消</string>
    <string name="app_nomore">没有更多了</string>
    <string name="app_re_register">账户登录过期，请重新登录</string>
    <string name="app_out">再按一次退出程序</string>
    <string name="app_imgerr">图片压缩失败</string>
    <string name="app_change_true">修改成功</string>
    <string name="app_setup_true">设置成功</string>
    <string name="app_card">请确认已经插入SD卡</string>
    <string name="app_iscancel">确认取消吗？</string>
    <string name="app_jsonerr">数据解析错误</string>
    <string name="app_file">图片已经保存到手机根目录</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_error">读取图片失败</string>
    <string name="app_sendcode">获取验证码</string>
    <string name="app_sendcode1">验证码</string>
    <string name="app_sendcode2">请输入验证码</string>
    <string name="app_sendcode_hint">验证码发送成功</string>
    <string name="app_sendcode_hint1">正在获取验证码，请稍后...</string>
    <string name="app_reacquirecode">重新获取</string>
    <string name="app_codethen">s后获取</string>
    <string name="app_tian">天</string>
    <string name="app_ren">人</string>
    <string name="app_yuan">元</string>
    <string name="app_ge">个</string>
    <string name="app_bei">倍</string>
    <string name="app_ji">级</string>
    <string name="app_shi">h</string>
    <string name="app_fen">m</string>
    <string name="app_miao">s</string>
    <string name="app_ri">日</string>
    <string name="app_yi">一</string>
    <string name="app_er">二</string>
    <string name="app_san">三</string>
    <string name="app_si">四</string>
    <string name="app_wu">五</string>
    <string name="app_liu">六</string>
    <string name="app_nian">年</string>
    <string name="app_yue">月</string>
    <string name="app_dan">单</string>
    <string name="app_shuang">双</string>
    <string name="app_dan1">单</string>
    <string name="app_shuang1">双</string>
    <string name="app_type_quanbu">全部</string>
    <string name="app_type_zhuangtai">状态</string>
    <string name="app_type_bizhong">币种</string>
    <string name="app_type_USDT">HNT</string>
    <string name="app_type_CNY">CNY</string>
    <string name="app_type_BWIN">BWIN</string>
    <string name="app_type_paixu">排序</string>
    <string name="app_type_leixing">类型</string>
    <string name="app_type_daishenhe">待审核</string>
    <string name="app_type_yitongguo">已通过</string>
    <string name="app_type_weitongguo">未通过</string>
    <string name="app_type_jiangxu">降序</string>
    <string name="app_type_shengxu">升序</string>
    <string name="app_type_jinxingzhong">进行中</string>
    <string name="app_type_yiwancheng">已完成</string>
    <string name="app_type_anyingli">按盈利</string>
    <string name="app_type_anshijian">按时间</string>
    <string name="app_type_anjine">按个数</string>
    <string name="app_type_yiijihuo">已激活</string>
    <string name="app_type_yijiangli">已奖励</string>
    <string name="app_type_zhuanchu">转出</string>
    <string name="app_type_zhuanru">转入</string>
    <string name="app_type_dengdaizhong">等待中</string>
    <string name="app_type_jiaoyizhong">交易中</string>
    <string name="app_type_yijieshu">已结束</string>
    <string name="app_type_zhongjiang">中奖</string>
    <string name="app_type_weizhongjiang">未中奖</string>
    <string name="app_loading">正在加载...</string>
    <string name="app_loading1">正在提交数据...</string>
    <string name="app_loading2">正在获取数据...</string>
    <string name="app_loading3">正在设置分享数据...</string>
    <string name="app_nodata">暂无数据</string>
    <string name="app_reload">没有数据</string>
    <string name="app_reload1">加载出错</string>
    <string name="app_abheader_refresh">下拉刷新</string>
    <string name="app_abheader_refreshtime">刷新时间：</string>
    <string name="app_abheader_refreshtlastime">上次刷新时间：</string>
    <string name="app_abheader_refreshletgo">松开刷新</string>
    <string name="app_abheader_refreshing">正在刷新...</string>
    <string name="app_abheader_refreshnowtime">本次刷新时间：</string>
    <string name="app_abfooter_loadmore">载入更多</string>
    <string name="app_abfooter_loading">正在加载...</string>
    <string name="app_abfooter_loadno">没有了！</string>
    <string name="app_abfooter_loadnodata">没有数据</string>
    <string name="app_err">网络开小差了，刷新试试</string>
    <string name="app_err1">数据出错了！</string>
    <string name="app_refresh">刷新</string>
    <string name="app_refresh1">分钟前</string>
    <string name="app_refresh2">小时前</string>
    <string name="app_refresh3">天前</string>
    <string name="app_refresh4">刚刚</string>
    <string name="app_refresh5">松开载入更多</string>
    <string name="app_refresh6">查看更多</string>
    <string name="fragment1">首页</string>
    <string name="fragment2">工作台</string>
    <string name="fragment3">论坛</string>
    <string name="fragment4">我的</string>
    <string name="fragment5"></string>
    <string name="update_hint">版本更新</string>
    <string name="update_hint1">SD卡不可用，请插入SD卡</string>
    <string name="update_hint2">已是最新版本</string>
    <string name="update_hint3">正在下载</string>
    <string name="update_hint4">请稍候...</string>
    <string name="update_hint5">正在安装程序</string>
    <string name="update_hint6">安装失败：</string>
    <string name="update_hint7">温馨提示</string>
    <string name="update_hint8">必须授权才能安装APK，请设置允许安装</string>
    <string name="update_hint9">设置</string>
    <string name="update_hint10">暂不更新</string>
    <string name="update_hint11">马上更新</string>
    <string name="update_hint12">发现新版本，升级后体验更顺畅！\n不升级当前版本不可使用</string>
    <string name="zxing_h1">将二维码放入框内，即可自动扫描</string>
    <string name="zxing_h2">暂时无法开启闪光灯</string>
    <string name="zxing_h3">扫一扫</string>
    <string name="zxing_h4">正在扫描...</string>
    <string name="zxing_h5">扫码转币</string>
    <string name="zxing_h6">保存相册</string>
    <string name="zxing_h7">正在生成二维码</string>
    <string name="zxing_h12">转币</string>
    <string name="zxing_h21">保存成功</string>
    <string name="zxing_h22">正在生成分享图片，请稍后...</string>
    <string name="zxing_h23">图片已保存</string>
    <string name="zxing_h24">转币记录</string>
    <string name="zxing_h25">二维码</string>
    <string name="zxing_h26">相册</string>
    <string name="zxing_h27">选择二维码图片</string>
    <string name="zxing_h28">图片格式错误</string>
    <string name="zxing_h29">充币个数（元）</string>
    <string name="zxing_h31">保存二维码</string>
    <string name="zxing_h32">保存二维码到相册</string>
    <string name="zxing_h33">微信/支付宝扫一扫\n从相册选择此二维码</string>
    <string name="zxing_h34">按充币个数转帐\n否则将充币失败</string>
    <string name="zxing_h35">扫码支付</string>
    <string name="zxing_h36">银行名称</string>
    <string name="zxing_h37">银行卡号</string>
    <string name="zxing_h38">银行账户</string>
    <string name="zxing_h39">银联支付</string>
    <string name="zxing_h40">*请务必按照生成个数付款</string>
    <string name="zxing_h41">保存海报</string>
    <string name="app_pay_true">支付成功</string>
    <string name="app_pay_false">支付失败</string>
    <string name="u1"><u>《违章查缴服务》</u></string>
    <string name="u2">《用户协议》</string>
    <string name="u3"><u>《银行卡绑定条例》</u></string>
    <string name="u4"><u>解除绑定</u></string>
    <string name="u5">《隐私协议》</string>
    <string name="title_activity_shou_hu_list">ShouHuListActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="changepassword_h1">修改登录密码</string>
    <string name="changepassword_h2">旧密码</string>
    <string name="changepassword_h3">新密码</string>
    <string name="changepassword_h4">确认新密码</string>
    <string name="changepassword_h5">请输入旧密码</string>
    <string name="changepassword_h6">请输入新密码</string>
    <string name="changepassword_h7">请再次确认新密码</string>
    <string name="changepassword_h8">两次输入的密码不一致</string>
    <string name="changepassword_h9">修改密码成功，请重新登录</string>
    <string name="changepassword_h10">确定</string>
    <string name="takecash_h1">提币</string>
    <string name="takecash_h2">HNT地址</string>
    <string name="takecash_h3">可用(HNT)：</string>
    <string name="takecash_h4">HNT价格：</string>
    <string name="takecash_h5">美元</string>
    <string name="takecash_h6">手机号码</string>
    <string name="takecash_h7">提币数量</string>
    <string name="takecash_h8">输入提币个数</string>
    <string name="takecash_h9">交易密码</string>
    <string name="takecash_h10">请输入交易密码</string>
    <string name="takecash_h11">实际到账</string>
    <string name="takecash_h12">确定</string>
    <string name="takecash_h13">提币提交成功</string>
    <string name="takecash_h14">手续费：</string>
    <string name="takecash_h15">HNT提币</string>
    <string name="takecash_h16">提币记录</string>
    <string name="takecash_h17"><u>HNT地址</u></string>
    <string name="takecash_h18">提币个数(HNT)</string>
    <string name="takecash_h19">提币成功</string>
    <string name="takecash_h20">提币处理中</string>
    <string name="takecash_h21">提币时间</string>
    <string name="takecash_h22">提币地址</string>
    <string name="takecash_h23">HNT地址</string>
    <string name="takecash_h24">提币个数：</string>
    <string name="takecash_h25">提币详情</string>
    <string name="takecash_h26">设置提币地址</string>
    <string name="takecash_h27">提币失败</string>
    <string name="takecash_h28">提币失败原因：</string>
    <string name="takecash_h29">手续费</string>
    <string name="takecash_h30">HNT提币</string>
    <string name="takecash_h31">暂无银行卡\n请添加</string>
    <string name="takecash_h32">银行名称</string>
    <string name="takecash_h33">银行卡号</string>
    <string name="takecash_h34">银行账户</string>
    <string name="address_h1">设置HNT地址</string>
    <string name="address_h2">HNT地址</string>
    <string name="address_h3">请输入HNT地址</string>
    <string name="address_h4">手机号</string>
    <string name="address_h5">请输入手机号</string>
    <string name="address_h6">验证码</string>
    <string name="address_h7">请输入验证码</string>
    <string name="address_h8">交易密码</string>
    <string name="address_h9">请输入交易密码</string>
    <string name="address_h10">确定</string>
    <string name="address_h11">HNT地址设置成功</string>
    <string name="address_h12">币地址管理</string>
    <string name="address_h13">暂无币地址\n请添加</string>
    <string name="address_h14">选择地区</string>
    <string name="address_h15">中国大陆用户</string>
    <string name="address_h16">Overseas Users</string>
    <string name="address_h17">资产地址</string>
    <string name="address_h18">资产地址二维码</string>
    <string name="address_h19">请提供ERC-20格式的USDT地址，否则您的资产将无法找回</string>
    <string name="address_h20">保存二维码</string>
    <string name="address_h21">澳洲用户</string>
    <string name="address_h22">日本用户</string>
    <string name="address_h23">韩国用户</string>
    <string name="address_h24">越南用户</string>
    <string name="address_h25">需设置交易密码后才可操作</string>
    <string name="address_h26">需设置HNT地址后才可操作</string>
    <string name="settransactionpassword_h1">设置交易密码</string>
    <string name="settransactionpassword_h2">手机号</string>
    <string name="settransactionpassword_h3">请输入手机号</string>
    <string name="settransactionpassword_h4">验证码</string>
    <string name="settransactionpassword_h5">请输入验证码</string>
    <string name="settransactionpassword_h6">交易密码</string>
    <string name="settransactionpassword_h7">请输入交易密码</string>
    <string name="settransactionpassword_h8">确认交易密码</string>
    <string name="settransactionpassword_h9">请再次确认交易密码</string>
    <string name="settransactionpassword_h10">两次输入的密码不一致</string>
    <string name="settransactionpassword_h11">交易密码修改成功</string>
    <string name="settransactionpassword_h12">确定</string>
</resources>