<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/background"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="14dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:text="@string/address_h2"
                android:textColor="@color/white"
                android:textColorHint="@color/black4" />

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:gravity="end"
                android:hint="@string/address_h3"
                android:paddingLeft="100dp"
                android:paddingTop="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black4" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:paddingBottom="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:paddingTop="14dp"
                android:text="@string/address_h8"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edittext_bg"
                android:gravity="right"
                android:hint="@string/address_h9"
                android:inputType="textPassword"
                android:paddingLeft="100dp"
                android:paddingTop="14dp"
                android:paddingRight="14dp"
                android:paddingBottom="14dp"
                android:textColor="@color/white"
                android:textColorHint="@color/black4"
                android:textSize="15sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn"
            android:gravity="center"
            android:onClick="onClick"
            android:textSize="15sp"
            android:padding="12dp"
            android:text="@string/address_h10"
            android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
