<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            //ETH地址

            <LinearLayout
                android:id="@+id/linearLayout_addr"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_yzm"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:padding="10dp"
                    android:text="@string/takecash_h26"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/takecash_h2"
                    android:textColor="@color/white1"
                    android:textSize="15sp" />

            </LinearLayout>

            //下部

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/takecash_h7"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/editText1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/edittext_bg"
                            android:gravity="right"
                            android:hint="@string/takecash_h8"
                            android:inputType="numberDecimal"
                            android:paddingLeft="100dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/black4"
                            android:textSize="15sp" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/takecash_h3"
                        android:paddingRight="34dp"
                        android:paddingTop="4dp"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="30dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:padding="14dp"
                            android:text="@string/takecash_h9"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/editText2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/edittext_bg"
                            android:gravity="right"
                            android:hint="@string/takecash_h10"
                            android:inputType="textPassword"
                            android:paddingLeft="100dp"
                            android:paddingTop="14dp"
                            android:paddingRight="14dp"
                            android:paddingBottom="14dp"
                            android:textColor="@color/white"
                            android:textColorHint="@color/black4"
                            android:textSize="15sp" />

                    </RelativeLayout>

                </LinearLayout>


                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:padding="12dp"
                    android:text="@string/takecash_h1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>